--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,38 @@ jobs:
   Build-rust:
     runs-on: arc-runner-set
     steps:
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+  
+    - name: Verify Rust installation
+      run: rustc --version
 
-    - name: install rust 
+    - name: Cache Cargo registry
+      uses: actions/cache@v2
+      with:
+        path: ~/.cargo/registry
+        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-registry-
+
+    - name: Cache Cargo index
+      uses: actions/cache@v2
+      with:
+        path: ~/.cargo/index
+        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-index-
+
+    - name: Build project
       run: |
-        apt install curl build-essential libssl-dev -y
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-    - name: build rust
+        cd rust-project  
+        cargo build --release
+
+    - name: Run tests
       run: |
-        cd rust-project
-        cargo build
-        cargo run
+        cd rust-project  
+        cargo test
+  
