--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
   Build-rust:
     runs-on: arc-runner-set
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
     - name: Install curl
       run: |
         sudo apt-get update 
@@ -46,6 +48,7 @@ jobs:
 
     - name: Build project
       run: |
+        ls
         cd rust-project  
         cargo build --release
 
