--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - name: Install curl
+        run: |
+          sudo apt-get update 
+          sudo apt-get install -y curl
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
