--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           sudo apt-get update 
           sudo apt-get install -y curl
+          sudo apt-get install -y build-essential
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
